[package]
name = "nimiq-genesis"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Nimiq Genesis configuration"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]
build = "build.rs"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
atomic = "0.4"
bitflags = "1.0"
hex = "0.4"
lazy_static = "1.2"
url = "1.7"

beserial = { path = "../beserial", features = ["net"] }
beserial_derive = { path = "../beserial/beserial_derive" }
nimiq-account = { path = "../primitives/account" }
nimiq-block = { path = "../primitives/block" }
nimiq-bls = { path = "../bls" }
nimiq-hash = { path = "../hash" }
nimiq-hash_derive = { path = "../hash/hash_derive" }
nimiq-keys = { path = "../keys" }
nimiq-macros = { path = "../macros" }
nimiq-peer-address = { path = "../peer-address" }
nimiq-primitives = { path = "../primitives", features = ["coin", "networks"] }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-trie = { path = "../primitives/trie" }
nimiq-utils = { path = "../utils", features = ["observer", "crc", "time"] }

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.4"

nimiq-build-tools = { path = "../build-tools" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
