[package]
name = "nimiq-genesis"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Nimiq Genesis configuration"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]
build = "build.rs"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.0"
hex = "0.4"
serde = "1.0"
url = "2.3"

nimiq-block = { path = "../primitives/block" }
nimiq-bls = { path = "../bls" }
nimiq-database = { path = "../database", optional = true }
nimiq-genesis-builder = { path = "../genesis-builder", optional = true }
nimiq-hash = { path = "../hash" }
nimiq-hash_derive = { path = "../hash/hash_derive" }
nimiq-keys = { path = "../keys" }
nimiq-macros = { path = "../macros" }
nimiq-primitives = { path = "../primitives", features = ["coin", "networks"] }
nimiq-serde = { path = "../serde" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-utils = { path = "../utils", features = ["time"] }

[build-dependencies]
log = { package = "tracing", version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nimiq-database = { path = "../database" }
nimiq-genesis-builder = { path = "../genesis-builder" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }

[features]
default = ["genesis-override"]
genesis-override = ["nimiq-database", "nimiq-genesis-builder"]
