[package]
name = "nimiq-handel"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>", "The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = { package = "futures-util", version = "0.3", features = ["sink"] }
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = "0.12"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.29", features = ["rt", "time"] }
tokio-stream = "0.1"

beserial = { path = "../beserial", features = ["derive"] }
nimiq-bls = { path = "../bls" }
nimiq-collections = { path = "../collections" }
nimiq-hash = { path = "../hash" }
nimiq-macros = { path = "../macros" }
nimiq-utils = { path = "../utils", features = [
    "math",
] }
nimiq-network-interface = { path = "../network-interface" }
nimiq-primitives = { path = "../primitives", features = ["policy"] }

[dev-dependencies]
nimiq-network-interface = { path = "../network-interface" }
nimiq-network-mock = { path = "../network-mock" }
nimiq-test-log = { path = "../test-log" }

tokio = { version = "1.29", features = ["rt", "time", "macros"] }
