[package]
name = "nimiq-handel"
version.workspace = true
authors = ["Janosch Gräf <janosch@nimiq.com>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "Nimiq implementation of the handel protocol"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
futures = { workspace = true }
linked-hash-map = "0.5.6"
log = { workspace = true }
instant = { version = "0.1", features = ["wasm-bindgen"] }
parking_lot = "0.12"
thiserror = "1.0"

nimiq-bls = { workspace = true }
nimiq-collections = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-serde = { workspace = true }
nimiq-time = { workspace = true }
nimiq-utils = { workspace = true, features = ["futures"] }

[dev-dependencies]
rand = "0.8"
serde = "1.0"
tokio = { version = "1.41", features = ["rt", "time", "macros"] }

nimiq-network-interface = { workspace = true }
nimiq-network-mock = { workspace = true }
nimiq-test-log = { workspace = true }
nimiq-utils = { workspace = true, features = ["spawn"] }
