[package]
name = "nimiq-hash"
version = "0.1.0"
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Common wrapper around hash implementations used in Nimiq"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
blake2-rfc = "0.2"
byteorder = "1.2"
hex = "0.4"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"

nimiq-database-value = { path = "../database/database-value" }
nimiq-macros = { path = "../macros" }
nimiq-mmr = { path = "../primitives/mmr" }
nimiq-serde = { path = "../serde" }

[dev-dependencies]
nimiq-test-log = { path = "../test-log" }
