[package]
name = "nimiq-hash"
version.workspace = true
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "Common wrapper around hash implementations used in Nimiq"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
blake2-rfc = "0.2"
byteorder = "1.2"
hex = "0.4"
rust-argon2 = "1.0"
serde = "1.0"
sha2 = "0.9"

nimiq-database-value = { path = "../database/database-value" }
nimiq-macros = { path = "../macros" }
nimiq-mmr = { path = "../primitives/mmr" }
nimiq-serde = { path = "../serde" }

[dev-dependencies]
nimiq-test-log = { path = "../test-log" }
