[package]
name = "nimiq-hash"
version.workspace = true
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "Common wrapper around hash implementations used in Nimiq"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
blake2-rfc = "0.2"
byteorder = "1.5"
hex = "0.4"
rust-argon2 = "2.1"
serde = "1.0"
sha2 = "0.10"
subtle = "2.5"

nimiq-database-value = { workspace = true }
nimiq-macros = { workspace = true }
nimiq-mmr = { workspace = true }
nimiq-serde = { workspace = true }

[dev-dependencies]
nimiq-test-log = { workspace = true }
