[package]
name = "nimiq-key-derivation"
version = "0.1.0"
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Helper library for key derivation in Nimiq"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.2"
regex = "1"
serde = "1.0"

nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-serde = { path = "../serde" }

[dev-dependencies]
hex = "0.4"

nimiq-test-log = { path = "../test-log" }
