[package]
name = "nimiq-key-derivation"
version.workspace = true
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "Helper library for key derivation in Nimiq"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.2"
regex = "1"
serde = "1.0"

nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys", features = ["serde-derive"] }
nimiq-serde = { path = "../serde" }

[dev-dependencies]
hex = "0.4"

nimiq-test-log = { path = "../test-log" }
