[package]
name = "nimiq-keys"
version.workspace = true
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "Ed25519 cryptographic key handling and signatures for Nimiq"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
curve25519-dalek = "3"
data-encoding = "2.4"
ed25519-zebra = "3.1"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.5", optional = true }
sha2 = "0.9"
thiserror = "1.0"

nimiq-database-value = { path = "../database/database-value" }
nimiq-hash = { path = "../hash" }
nimiq-hash_derive = { path = "../hash/hash_derive" }
nimiq-macros = { path = "../macros" }
nimiq-serde = { path = "../serde", optional = true }
nimiq-utils = { path = "../utils", features = ["key-rng"] }

[dev-dependencies]
nimiq-test-log = { path = "../test-log" }
nimiq-test-utils = { path = "../test-utils" }

[features]
serde-derive = ["nimiq-serde", "serde", "serde-big-array"]
