[package]
name = "nimiq-keys"
version.workspace = true
authors = [
    "Pascal B <git@paberr.net>",
    "The Nimiq Core Development Team <info@nimiq.com>",
]
license.workspace = true
edition.workspace = true
description = "Ed25519 cryptographic key handling and signatures for Nimiq"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
curve25519-dalek = { version = "4", features = [
    "digest",
    "legacy_compatibility",
] }
data-encoding = "2.5"
ed25519-zebra = "4.0"
hex = "0.4"
p256 = "0.13"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.5", optional = true }
sha2 = "0.10"
thiserror = "1.0"
itertools = "0.10.3"
zeroize = { version = "1.5", features = ["zeroize_derive"] }

nimiq-database-value = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-hash_derive = { workspace = true }
nimiq-macros = { workspace = true }
nimiq-serde = { workspace = true, optional = true }
nimiq-utils = { workspace = true, features = ["key-rng", "merkle", "tagged-signing"] }

[dev-dependencies]
nimiq-test-log = { workspace = true }
nimiq-test-utils = { workspace = true }

[features]
serde-derive = ["nimiq-serde", "serde", "serde-big-array", "p256/serde"]
