[package]
name = "nimiq-lib"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Nimiq's Rust library"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console-subscriber = { version = "0.2", features = ["parking_lot"], optional = true }
derive_builder = "0.20"
directories = "5.0"
hex = "0.4"
# human-panic = { version = "1.0", optional = true } currently unused, might be used in the future
log = { package = "tracing", version = "0.1", features = ["log"] }
log-panics = { version = "2.1", features = ["with-backtrace"], optional = true }
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3.1"
rustls-pemfile = "2.1"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
signal-hook = { version = "0.3", optional = true }
strum_macros = "0.26"
thiserror = "1.0"
time = { version = "0.3", optional = true }
tokio = { version = "1.36", features = ["rt"], optional = true }
toml = "0.8"
tracing-loki = { version = "0.2.4", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "std"] }
tracing-web = { version = "0.1", optional = true}
url = { version = "2.5", features = ["serde"] }

nimiq-block = { workspace = true }
nimiq-blockchain = { workspace = true, optional = true }
nimiq-blockchain-interface = { workspace = true }
nimiq-blockchain-proxy = { workspace = true, default-features = false }
nimiq-bls = { workspace = true }
nimiq-consensus = { workspace = true, default-features = false }
nimiq-database = { workspace = true, optional = true }
nimiq-genesis = { workspace = true, default-features = false }
nimiq-jsonrpc-core = { workspace = true, optional = true }
nimiq-jsonrpc-server = { workspace = true, optional = true }
nimiq-keys = { workspace = true }
nimiq-light-blockchain = { workspace = true }
nimiq-log = { workspace = true, optional = true }
nimiq-mempool = { workspace = true, optional = true }
nimiq-metrics-server = { workspace = true, optional = true }
nimiq-network-libp2p = { workspace = true }
nimiq-network-interface = { workspace = true }
nimiq-primitives = { workspace = true, features = ["networks"] }
nimiq-rpc-server = { workspace = true, optional = true }
nimiq-serde = { workspace = true }
nimiq-utils = { workspace = true, features = ["time", "key-store"] }
nimiq-validator = { workspace = true, optional = true, features = ["trusted_push"] }
nimiq-validator-network = { workspace = true, optional = true }
nimiq-wallet = { workspace = true, optional = true, features = ["store"] }
nimiq-zkp = { workspace = true }
nimiq-zkp-circuits = { workspace = true }
nimiq-zkp-component = { workspace = true }
nimiq-zkp-primitives = { workspace = true }

[dev-dependencies]
nimiq-test-log = { workspace = true }

[features]
database-storage = ["nimiq-database", "nimiq-zkp-component/database-storage"]
deadlock = ["parking_lot/deadlock_detection"]
default = ["full-consensus"]
full-consensus = ["database-storage", "nimiq-blockchain", "nimiq-consensus/full"]
launcher = []
logging = ["nimiq-log", "serde_json", "tokio", "tracing-subscriber"]
loki = ["logging", "tracing-loki"]
metrics-server = ["nimiq-metrics-server", "nimiq-network-libp2p/metrics", "nimiq-validator/metrics"]
panic = ["log-panics"]
parallel = ["nimiq-zkp/parallel", "nimiq-zkp-circuits/parallel", "nimiq-zkp-component/parallel", "nimiq-zkp-primitives/parallel"]
rpc-server = ["nimiq-jsonrpc-core", "nimiq-jsonrpc-server", "nimiq-rpc-server", "nimiq-wallet", "validator"]
signal-handling = ["signal-hook", "tokio"]
tokio-console = ["console-subscriber", "logging", "tokio/tracing"]
tokio-websocket = ["nimiq-network-libp2p/tokio-websocket"]
validator = ["database-storage", "nimiq-mempool", "nimiq-validator", "nimiq-validator-network", "nimiq-rpc-server"]
wallet = ["database-storage", "nimiq-wallet"]
web-logging = ["nimiq-log", "time/wasm-bindgen", "tracing-subscriber", "tracing-web"]
zkp-prover = ["nimiq-zkp/zkp-prover", "nimiq-zkp-circuits/zkp-prover", "nimiq-zkp-component/zkp-prover", "nimiq-zkp-primitives/zkp-prover"]
