[package]
name = "nimiq-lib2"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Nimiq's Rust library"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
log = "0.4"
derive_builder = "0.9"
directories = "1.0"
enum-display-derive = "0.1"
rand = "0.6"
rand04_compat = "0.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
url = "1.7"
hex = "0.3"
structopt = "0.3"
lazy_static = "1.4"
chrono = "0.4"
fern = { version = "0.5", features = ["colored"], optional = true }
colored = { version = "1.7", optional = true }
parking_lot = { version = "0.7", features = ["deadlock_detection"], optional = true }
log-panics = { version = "2.0", features = ["with-backtrace"], optional = true }
human-panic = { version = "1.0", optional = true }
nimiq-network = "0.1"
nimiq-consensus = "0.1"
nimiq-database = "0.1"
nimiq-network-primitives = { version = "0.1", features = ["all"] }
nimiq-primitives = { version = "0.1", features = ["networks"] }
nimiq-mempool = "0.1"
nimiq-utils = "0.1"
nimiq-validator = { version = "0.1", optional = true }
nimiq-bls = { version = "0.1", optional = true }
nimiq-blockchain-albatross = "0.1"
nimiq-keys = "0.1"

[features]
default = ["filestorage", "validator"]
filestorage = []
validator = ["nimiq-validator", "nimiq-bls"]
