[package]
name = "nimiq-lib2"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Nimiq's Rust library"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
log = "0.4"
# Note: Implemented `builder(setter(custom))` to set custom setters.
# Pull Request: https://github.com/colin-kiegel/rust-derive-builder/pull/154
#derive_builder = "0.8"
derive_builder = { git = "https://github.com/jgraef/rust-derive-builder", branch = "janosch/custom-setter" }
directories = "1.0"
enum-display-derive = "0.1"
rand = "0.6"
rand04_compat = "0.1"
nimiq-network = { version = "0.1" }
nimiq-consensus = { version = "0.1" }
nimiq-database = { version = "0.1" }
nimiq-network-primitives = { version = "0.1", features = ["all"] }
nimiq-primitives = { version = "0.1", features = ["networks"] }
nimiq-mempool = { version = "0.1" }
nimiq-utils = { version = "0.1" }
nimiq-validator = { version = "0.1", optional = true }
nimiq-bls = { version = "0.1", optional = true }
nimiq-blockchain-albatross = { version = "0.1" }

[features]
default = ["filestorage", "validator"]
filestorage = []
validator = ["nimiq-validator", "nimiq-bls"]
