[package]
name = "libargon2-sys"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
links = "argon2"
build = "build.rs"
description = "Rust bindings for Argon2"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
edition = "2018"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["hash"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
